--- a/inserator/settings.properties
+++ b/inserator/settings.properties
@@ -3,4 +3,4 @@ gruppenname= dbp64
 # Das dazugehörige Passwort
 passwort= zoo4ahbo
 # Name des Rechners im DB-Pool, eine Liste von Rechnernamen ist außerdem auf der Vorlesungsseite verlinkt.
-rechnername= phoebe
+rechnername= helios
